fixing alignment issues

--- a/styles.css
+++ b/styles.css
@@ -94,11 +94,10 @@ main>section:first-child{
     margin-top: 30px;
     width: 100%;
 }
-.paperContainer{
-    position: absolute;
+.paper {
     width: 100%;
 }
-.list{
+.list {
     position: relative;
     margin-top: 40px;
 }
@@ -165,7 +164,12 @@ button{
    background-color:rgb(255, 89, 89);
    border: none;
    color: white;
-   padding: 0 30px 0 30px;
+   padding: 10px 30px 10px 30px;
+}
+.buttonContainer{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 footer>section>div{
     display: flex;
